[package]
name = "mdfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
itertools = "0.10.5"
markdown = "1.0.0-alpha.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde_with = { version = "2.2.0", features = ["json"] }
serde_yaml = "0.9.17"
thiserror = "1.0.38"

[[bin]]
path = "src/main.rs"
name = "md-fmt"
