[package]
name = "mdfmt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.11", features = ["derive"] }
glob = "0.3.1"
indoc = "2.0.1"
itertools = "0.10.5"
markdown = "1.0.0-alpha.7"
once_cell = "1.17.1"
regex = "1.7.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
serde_with = { version = "2.3.1", features = ["json"] }
serde_yaml = "0.9.19"
thiserror = "1.0.40"
yaml-rust = "0.4.5"

[[bin]]
path = "src/main.rs"
name = "md-fmt"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
