[package]
name = "mdfmt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.14", features = ["derive"] }
glob = "0.3.1"
indoc = "2.0.1"
itertools = "0.11.0"
markdown = "1.0.0-alpha.9"
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["raw_value"] }
serde_with = { version = "3.0.0", features = ["json"] }
serde_yaml = "0.9.22"
thiserror = "1.0.40"
yaml-rust = "0.4.5"

[[bin]]
path = "src/main.rs"
name = "md-fmt"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
